service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-service 
  labels:
    name: bank-service   
spec:
  ports:
    - name: http
      protocol: TCP
    - port: 8458
  selector:
    app: bank-service
  type: NodePort
